# economic-data-project

./: .cursorrules  .dockerignore  .env.dagster.example  .env.example  .gitattributes  .gitignore  .mcp.json  .sqlfluff  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DAGSTER_OSS_QUICKSTART.md  DockerFile_code_location_1  Dockerfile_dagster  LICENSE  Readme.md  SECURITY.md  bls-data.py  census-data.py  claude.md  dagster.yaml  dagster_cloud.yaml  dagster_run.yaml  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  fred-data.py  makefile  realtor-data.py  requirements.txt  utils.py  wizard-loops.yml  workspace.yaml
.claude/: settings.json
.config/: wt.toml
document_extraction/: README.md  dbt_ml_project.yml  profiles.yml  pyproject.toml
document_extraction/models/: fomc_document_chunks.yml  fomc_document_registry.yml  sec_document_chunks.yml  sec_document_clusters.yml  sec_document_registry.yml  sec_document_text.yml  sec_document_tfidf.yml  sec_document_topics.yml
document_extraction/sources/: fomc_transcripts.yml  sec_filings.yml
document_extraction/transforms/: sec_envelope_text.py
econ_data_platform/: README.md  dagster.yaml  pyproject.toml
econ_data_platform/econ_data_platform/: definitions.py
econ_data_platform/econ_data_platform/assets/bi/: evidence.py
econ_data_platform/econ_data_platform/assets/dbt/: dbt.py
econ_data_platform/econ_data_platform/assets/ingestion/: bls.py  fred.py  realtor.py
econ_data_platform/econ_data_platform/resources/: fred.py  google_drive.py  motherduck.py
macro_agents/: .env.example  dagster_cloud.yaml  metaxy.toml  pyproject.toml
macro_agents/scripts/: bigquery_access_audit.py  cleanup_non_usd_data.py
macro_agents/src/macro_agents/: definitions.py
macro_agents/src/macro_agents/defs/: asset_failure_sensor.py  resources.py  schedules.py  shared_resources.py
macro_agents/src/macro_agents/defs/agents/: __init__.py  ai_models_fetcher.py  analysis_agent.py  asset_allocation_analyzer.py  asset_class_relationship_analyzer.py  backtest_asset_class_relationship_analyzer.py  backtest_economy_state_analyzer.py  backtest_evaluator.py  backtest_investment_recommendations.py  backtest_optimizer.py  backtest_utils.py  backtesting.py  backtesting_visualization.py  dspy.py  dspy_evaluation.py  economic_cycle_analyzer.py  economic_dashboard.py  economy_state_analyzer.py  enhanced_economic_cycle_analyzer.py  investment_recommendations.py  model_improvement_pipeline.py
macro_agents/src/macro_agents/defs/alerts/: __init__.py  assets.py  config.py  definitions.yaml  defs.py  sensor.py
macro_agents/src/macro_agents/defs/analysis/: __init__.py  assets.py  checks.py  defs.py  jobs.py  resources.py  schedules.py
macro_agents/src/macro_agents/defs/analysis/ai/: ai_models_fetcher.py  nl_to_sql_module.py
macro_agents/src/macro_agents/defs/analysis/asset_relationships/: asset_class_relationship_analyzer.py
macro_agents/src/macro_agents/defs/asset_failure/: __init__.py  _common.py  github_issues.py  handlers.py  tracking.py
macro_agents/src/macro_agents/defs/backtesting/: __init__.py  assets.py  backtest_asset_class_relationship_analyzer.py  backtest_economy_state_analyzer.py  backtest_evaluator.py  backtest_investment_recommendations.py  backtest_optimizer.py  backtest_utils.py  defs.py  jobs.py
macro_agents/src/macro_agents/defs/constants/: fred_series_lists.py  market_stack_constants.py
macro_agents/src/macro_agents/defs/domains/: __init__.py  calendar_events.py  calendar_holidays.py  calendars.py  data_infra.py  fomc_parsing.py  fomc_transcripts.py  housing.py  housing_checks.py  macro.py  macro_checks.py  social.py  social_checks.py  social_sentiment.py  social_tickers.py
macro_agents/src/macro_agents/defs/ingestion/: bls.py  fred.py  market_stack.py  treasury_yields.py
macro_agents/src/macro_agents/defs/replication/: replication.yaml  sling.py
macro_agents/src/macro_agents/defs/resources/: __init__.py  _url_secrets.py  bigquery_query.py  bigquery_warehouse.py  company_list_scraper.py  federal_reserve.py  fred.py  gcs.py  github.py  gmail.py  google_drive.py  google_sheets.py  market_stack.py  motherduck.py  nl_query_resource.py  ollama.py  pdf.py  reddit.py  schwab.py  sec_edgar.py  sqlite_resource.py  yahoo_finance.py
macro_agents/src/macro_agents/defs/sensors/: __init__.py
macro_agents/src/macro_agents/defs/signals/: __init__.py  absorption_ratio.py  checks.py  defs.py  entropy_complexity.py  fear_greed_composite.py  network_correlation.py  turbulence_index.py
macro_agents/src/macro_agents/defs/telemetry/: checks.py  telemetry.py
macro_agents/src/macro_agents/defs/transformation/: __init__.py  checks.py  dbt.py  dbt_ml.py  fci_calculations.py  fci_data.py  financial_condition_index.py
macro_agents/src/macro_agents/defs/utils/: __init__.py  sec_bi_extractor.py  sec_llm_analyzer.py  sec_markdown_converter.py  sec_text_extractor.py
macro_agents/tests/: conftest.py  test_analysis_agents.py  test_asset_check_failure_sensor.py  test_bigquery_parameterized_callers.py  test_bigquery_warehouse.py  test_calendar_helpers.py  test_company_list_scraper.py  test_dagster_assets_descriptions.py  test_dagster_retention_cleanup.py  test_data_point_finder.py  test_dbt_ml_producer.py  test_dbt_models_descriptions.py  test_dbt_platform_observe_only.py  test_dbt_validation.py  test_domain_fetchers.py  test_domain_sub_agents.py  test_dspy_modules.py  test_earnings_calendar_types.py  test_environment_defaults.py  test_fci_calculations.py  test_federal_reserve_resource.py  test_filing_downloader.py  test_fomc_parsing.py  test_github_resource.py  test_integration.py  test_macro_checks.py  test_market_checks.py  test_metaxy_lineage.py  test_network_isolation.py  test_nl_to_sql_bigquery.py  test_ollama_resource.py  test_reddit_resource.py  test_resources.py  test_schedules.py  test_sec_bi_extractor.py  test_sec_cik_history.py  test_sec_edgar_resource.py  test_sec_filing_content_schema.py  test_sec_gcs_helpers.py  test_sec_llm_analyzer.py  (+9 more)
macro_agents/tests/alerts/: test_config.py  test_evaluations.py  test_gmail_resource.py
(+590 files in other folders)
