[project]
name = "macro_agents"
requires-python = ">=3.10.19,<3.14"
version = "0.1.0"
dependencies = [
    "dagster>=1.11.4",
    "dagster-cloud",
    "dagster-duckdb",
    "polars",
    "dagster-dbt",
    "requests",
    "dbt-core",
    "google-api-core",
    "google-auth",
    "google-cloud-bigquery",
    "dbt-duckdb",
    "dagster-shared>=1.11.4",
    "dagster-pipes>=1.11.4",
    "dagster-dg-cli>=1.11.4",
    "dagster-webserver>=1.11.4",
    "pyarrow>=21.0.0",
    "beautifulsoup4",
    "lxml",
    "ruff>=0.12.7",
    "tenacity>=9.1.2",
    "dspy>=2.6.27",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
    "dagster-sling",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "ruff",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "macro_agents"

[tool.pytest.ini_options]
markers = [
    "essential: Essential tests that must pass in CI",
    "skip_ci: Tests to skip in CI (brittle or non-essential)",
]


