[project]
name = "macro_agents"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.18,<2.0.0",
    "dagster-cloud",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "dagster-postgres>=0.28.18,<1.0.0",
    "dagster-docker>=0.28.18,<1.0.0",
    "dagster-duckdb",
    "duckdb>=1.4.0,<1.5.0",
    "polars>=1.0.0,<2.0.0",
    "dagster-dbt",
    "requests>=2.31.0,<3.0.0",
    "dbt-core>=1.11.10,<2.0.0",
    "google-api-core>=2.0.0,<3.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "google-cloud-bigquery>=3.0.0,<4.0.0",
    "dbt-duckdb>=1.10.0,<2.0.0",
    "dagster-shared>=1.12.18,<2.0.0",
    "dagster-pipes>=1.12.18,<2.0.0",
    "dagster-dg-cli>=1.12.18,<2.0.0",
    "dagster-webserver>=1.12.18,<2.0.0",
    "pyarrow>=21.0.0,<24.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<7.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "dspy>=3.0.0,<4.0.0",
    "dagster-sling",
    "google-cloud-storage>=2.10.0,<4.0.0",
    "altair>=5.3.0,<6.0.0",
    "vl-convert-python>=1.6.0,<2.0.0",
    "openai>=1.0.0,<3.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-httplib2>=0.1.0,<1.0.0",
    "PyGithub>=2.1.1,<3.0.0",
    "gspread>=6.0.0,<7.0.0",
    "ruff>=0.12.10",
    "pyyaml>=6.0.0,<7.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "scipy>=1.12.0,<2.0.0",
    "networkx>=3.2.0,<4.0.0",
    "pdfplumber>=0.11.0,<1.0.0",
    "vadersentiment>=3.3.2",
    "sqlglot>=25.0.0,<27.0.0",
    "metaxy>=0.1.10,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "ty",
    "ruff>=0.12.7,<1.0.0",  # Move ruff here
    "sqlfluff>=3.4.2,<4.0.0",  # Move sqlfluff here
    "sqlfluff-templater-dbt>=3.4.2,<4.0.0",  # Move here
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macro_agents"]
include = [
    "dbt_project/**/*",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "macro_agents"

[tool.pytest.ini_options]
markers = [
    "essential: Essential tests that must pass in CI",
    "skip_ci: Tests to skip in CI (brittle or non-essential)",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:",
    "ignore::DeprecationWarning:pydantic._internal._config",
    "ignore::DeprecationWarning:dagster._core.definitions.run_request:",
    "ignore::DeprecationWarning:dagster._core.definitions.sensor_definition:",
    "ignore:Non-compliant tag keys like .*:DeprecationWarning:dagster._core.definitions.schedule_definition",
]
